--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@
 
 DATABASE_URL="mongodb+srv://nwikechisom77:DwwUV31OlRKAbrAG@webspiredb.fkvlnh7.mongodb.net/webspirre"
 
+GOOGLE_CLIENT_ID=504846405141-6efihdpm7hoosg2vanvlpvbrj9m9bpih.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=J7kQG9Lz1Dp6s5cE3tN2vR4iAxF8hW0y
+
+# Uncomment the following line if you would like your application to be run inside a Docker container
+# DOCKER=true
