--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.0",
     "@fontsource/carter-one": "^5.0.8",
     "@next/font": "^14.1.0",
     "@prisma/client": "^5.9.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18"
