--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "supabase": "^1.151.1"
   },
   "devDependencies": {
     "@types/node": "^20",
