--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/carter-one": "^5.0.8",
     "@next/font": "^14.1.0",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
