--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@fontsource/carter-one": "^5.0.8",
+    "@headlessui/react": "^2.0.3",
     "@next/font": "^14.1.0",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-video": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "supabase": "^1.151.1"
   },
   "devDependencies": {
