--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@headlessui/react": "^2.0.3",
     "@next/font": "^14.1.0",
     "classnames": "^2.5.1",
+    "country-list": "^2.3.0",
+    "flag-icon-css": "^4.1.7",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-video": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-flags-select": "^2.2.3",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "supabase": "^1.151.1"
   },
   "devDependencies": {
