--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/carter-one": "^5.0.8",
     "@headlessui/react": "^2.0.3",
     "@next/font": "^14.1.0",
+    "@supabase/ssr": "^0.3.0",
     "classnames": "^2.5.1",
     "country-list": "^2.3.0",
     "flag-icon-css": "^4.1.7",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-flags-select": "^2.2.3",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "supabase": "^1.151.1"
@@ -30,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
