--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/carter-one": "^5.0.8",
     "@headlessui/react": "^2.0.3",
     "@next/font": "^14.1.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.3.0",
     "classnames": "^2.5.1",
     "country-list": "^2.3.0",
