--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "country-list": "^2.3.0",
     "flag-icon-css": "^4.1.7",
     "framer-motion": "^11.0.3",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "next-video": "^1.0.6",
     "react": "^18",
@@ -31,6 +32,7 @@
     "supabase": "^1.151.1"
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
