--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
+    "types": ["vitest/globals"],
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -21,6 +22,19 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["video.d.ts", "video.d.ts", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/componet/browse_designs/Browse.js", "src/componet/browse_designs/Card.js", "src/componet/browse_designs/data.js", "src/componet/browse_designs/Tabs.js", "src/app/admin/dashboard/upload.jsx", "src/app/api/auth/[...nextauth]/route.ts"],
+  "include": [
+    "video.d.ts",
+    "video.d.ts",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/componet/browse_designs/Browse.js",
+    "src/componet/browse_designs/Card.js",
+    "src/componet/browse_designs/data.js",
+    "src/componet/browse_designs/Tabs.js",
+    "src/app/admin/dashboard/upload.jsx",
+    "src/app/api/auth/[...nextauth]/route.ts"
+  ],
   "exclude": ["node_modules"]
 }
