--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@fontsource/carter-one": "^5.0.8",
@@ -14,10 +17,12 @@
     "@next/font": "^14.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.3.0",
+    "@vitest/ui": "^1.6.0",
     "classnames": "^2.5.1",
     "country-list": "^2.3.0",
     "flag-icon-css": "^4.1.7",
     "framer-motion": "^11.0.3",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "next-video": "^1.0.6",
     "react": "^18",
@@ -28,9 +33,13 @@
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
-    "supabase": "^1.151.1"
+    "supabase": "^1.151.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -39,8 +48,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.6.0"
   }
 }
