--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "deno.enable": true
+  "deno.enable": true,
+  "compile-hero.disable-compile-files-on-did-save-code": false
 }
