--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@fontsource/carter-one": "^5.0.8",
     "@headlessui/react": "^2.0.3",
     "@next/font": "^14.1.0",
@@ -37,6 +38,7 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@mswjs/data": "^0.16.1",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
