--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.5",
     "@vitest/ui": "^1.6.0",
+    "aos": "^2.3.4",
     "classnames": "^2.5.1",
     "country-list": "^2.3.0",
     "flag-icon-css": "^4.1.7",
@@ -44,6 +45,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/aos": "^3.0.7",
     "@types/moment": "^2.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
