--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "next-video": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
     "react-flags-select": "^2.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "supabase": "^1.151.1",
