--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@faker-js/faker": "^8.4.1",
     "@fontsource/carter-one": "^5.0.8",
     "@headlessui/react": "^2.0.3",
@@ -23,6 +25,7 @@
     "@vitest/ui": "^1.6.0",
     "aos": "^2.3.4",
     "classnames": "^2.5.1",
+    "cloudinary-react": "^1.8.1",
     "country-list": "^2.3.0",
     "flag-icon-css": "^4.1.7",
     "framer-motion": "^11.0.3",
@@ -35,7 +38,9 @@
     "react-flags-select": "^2.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
