--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@cloudinary/url-gen": "^1.19.0",
     "@faker-js/faker": "^8.4.1",
     "@fontsource/carter-one": "^5.0.8",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.3",
     "@next/font": "^14.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
